# husky_xarm_robotiq_installer

./: LICENSE  README.md  installation_script.bash
src/mbs/mbs_husky_control/: CMakeLists.txt  package.xml
src/mbs/mbs_husky_control/config/: gps_localization_config.yaml  mag_config.yaml  odom_localization_config.yaml  wheel_localization_config.yaml
src/mbs/mbs_husky_control/launch/: ekf_localization.launch  global_ekf_localization.launch  local_ekf_localization.launch  navsat.launch  wheel_ekf.launch
src/mbs/mbs_husky_control/scripts/: odom_repub.py
src/mbs/mbs_husky_description/: CMakeLists.txt  package.xml
src/mbs/mbs_husky_description/launch/: bringup.launch  description.launch
src/mbs/mbs_husky_description/meshes/: Ouster_Frame_Top.stl  alu_doub_prof.stl  blick_sensor.dae  blick_sensor.stl  os1_64.stl  qoocam.dae  qoocam.stl  reach_rs2.dae  reach_rs2.stl  sensor_holder_base.dae  sensor_holder_base.stl
src/mbs/mbs_husky_description/rviz/: model.rviz  robot.rviz
src/mbs/mbs_husky_description/urdf/: accessories.urdf.xacro  husky_xarm.urdf  husky_xarm.urdf.srdf  husky_xarm.urdf.xacro
src/mbs/mbs_husky_description/urdf/include/: robotiq_arg2f_140.xacro  robotiq_arg2f_140_model_macro.xacro  xarm6_with_gripper.xacro
src/mbs/mbs_husky_startup/: CMakeLists.txt  package.xml  startup_script.sh
src/mbs/mbs_husky_startup/config/: setup.bash
src/mbs/mbs_husky_startup/launch/: mbs_husky.launch
src/mbs/mbs_husky_startup/launch/include/: husky_base.launch  husky_control.launch  microstrain.launch  phidget_imu_driver.launch  phidgets_driver.launch  power_relay.launch  um7_imu_driver.launch  zed2.launch.bash
src/mbs/mbs_husky_startup/power_relay_firmware/: power_relay_firmware.ino
src/mbs/mbs_husky_startup/scripts/: startup_installer.py
src/mbs/mbs_husky_startup/src/: listener.py  mbs_husky.py
src/mbs/mbs_husky_xarm_interface/: CMakeLists.txt  package.xml
src/mbs/mbs_husky_xarm_interface/config/: joint_limits.yaml
src/mbs/mbs_husky_xarm_interface/launch/: real_arm.launch  real_arm_moveit.launch
src/mbs/mbs_husky_xarm_interface/launch/include/: moveit_common.launch.xml  planning_context.launch.xml
src/mbs/mbs_husky_xarm_interface/viz/: examples.rviz
src/mbs/mbs_viz/: CMakeLists.txt  package.xml
src/mbs/mbs_viz/launch/: viz.launch
src/mbs/mbs_viz/rviz/: model.rviz
src/mbs/mbs_xarm_robotiq/: CMakeLists.txt  package.xml  setup.py
src/mbs/mbs_xarm_robotiq/action/: GripperGrasp.action
src/mbs/mbs_xarm_robotiq/launch/: xarm_standalone_moveit.launch
src/mbs/mbs_xarm_robotiq/launch/include/: robotiq_hardware_driver.launch  xarm_hardware_driver.launch
src/mbs/mbs_xarm_robotiq/nodes/: robotiq_2f.py  test_robotiq_gripper.py
src/mbs/mbs_xarm_robotiq/src/mbs_xarm_robotiq/: __init__.py
src/utils/: .interfaces  set_static_ip.py  setup.bash
utils/: motd.txt  set_static_ip.py  setup.bash  udev_setup.sh
utils/.clearpath_udev/: README.md
utils/.fresh_installation_instructions/: README.md
(+41 files in other folders)
