<?xml version="1.0"?>
<package format="2">
  <name>mbs_husky_control</name>
  <version>1.0.0</version>
  <description>The mbs_husky_control package</description>

  <maintainer email="salman.sohail@mybotshop.de">Salman Omar Sohail</maintainer>
  <author email="salman.sohail@mybotshop.de">Salman Omar Sohail</author>
  <license>private</license>
  <url type="website">https://mybotshop.de</url>
  <url type="repository">https://mybotshop.de</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>robot_localization</exec_depend>
</package>
