<?xml version="1.0"?>
<package>
  <name>mbs_husky_description</name>
  <version>0.0.0</version>
  <description>Template for user customization of Husky URDF</description>

  <license>BSD</license>

  <maintainer email="support@mybotshop.com">Salman Omar Sohail</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>