<?xml version="1.0"?>
<package format="2">
  <name>mbs_husky_startup</name>
  <version>0.0.0</version>
  <description>The mbs_husky_startup package</description>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>