<?xml version="1.0"?>
<package>
  <name>mbs_xarm_robotiq</name>
  <version>0.0.0</version>
  <description>xARM demo with robotiq gripper</description>

  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>